# denim-on-sam

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: codecov.yml
.github/workflows/: docker.yml  rust.yml
client/: Cargo.toml
client/src/: client.rs  denim_client.rs  error.rs  lib.rs  message.rs  receiver.rs
client/src/deniable_store/: inmem.rs  mod.rs  sqlite.rs
client/src/encryption/: encrypt.rs  error.rs  key.rs  mod.rs
client/src/message/: error.rs  mod.rs  process.rs  queue.rs  traits.rs
client/src/protocol/: denim_client.rs  mod.rs  receiver.rs
client/src/store/: inmem.rs  mod.rs  seed.rs  sqlite.rs
common/: Cargo.toml  build.rs  denim_message_generated.rs
common/flatbuffer/: denim_message.fbs
common/proto/: DenimMessage.proto
common/src/: error.rs  keys.rs  lib.rs  receiving_buffer.rs  seed.rs  sending_buffer.rs
common/src/buffers/: mod.rs  types.rs
common/src/buffers/in_mem/: mod.rs  recv.rs  send.rs
common/src/buffers/traits/: mod.rs  recv.rs  send.rs
common/src/crypto/: chacha.rs  mod.rs  traits.rs
common/src/rng/: chacha.rs  mod.rs  seed.rs  state.rs
common/tests/: buffers.rs
e2e/: Cargo.toml
e2e/src/: main.rs
e2e/src/utils/: client.rs  tls.rs
e2e/tests/: account.rs  device.rs  keys.rs  message.rs  proxy.rs
e2e/tests/utils/: client.rs  server.rs  tls.rs
example/: Cargo.toml
example/src/: main.rs
proxy/: Cargo.toml
proxy/database/: test-database.yml
proxy/src/: config.rs  denim_routes.rs  error.rs  lib.rs  main.rs  proxy.rs  routes.rs  server.rs  state.rs  utils.rs
proxy/src/logic/: account.rs  keys.rs  message.rs  mod.rs
proxy/src/managers/: error.rs  mod.rs  postgres.rs
proxy/src/managers/default/: buffer_manager.rs  crypto_provider.rs  key_gen.rs  mod.rs
proxy/src/managers/entities/: mod.rs  seed.rs
proxy/src/managers/in_mem/: block_list.rs  id_provider.rs  keys.rs  message.rs  mod.rs  request.rs
proxy/src/managers/inmem/: mod.rs
proxy/src/managers/traits/: block_list.rs  crypto_provider.rs  keys.rs  message.rs  message_id_provider.rs  mod.rs  request.rs
proxy/src/state/: in_mem.rs  mod.rs  postgres.rs
scripts/: generate_cert.sh  server_cert_ext.cnf
