[workspace.package]
authors = ["SAM Research"]
license = "MIT"
repository = "https://github.com/SAM-Research/denim-on-sam"

[workspace]
resolver = "2"

members = ["proxy", "common", "client"]

[workspace.dependencies]
denim-sam-proxi = { path = "proxy" }
denim-sam-client = { path = "client" }
denim-sam-common = { path = "common" }

derive_more = "2.0.1"
log = "0.4.25"
env_logger = "0.11.6"
sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", version = "0.1.0" }
tokio = "1.40.0"
prost-build = "0.13.5"
prost = "0.13.5"
bon = "3.5.0"
async-trait = "0.1.83"
