[workspace.package]
authors = ["SAM Research"]
license = "MIT"
repository = "https://github.com/SAM-Research/denim-on-sam"

[workspace]
resolver = "2"

members = ["proxy", "common", "client", "e2e"]

[workspace.dependencies]
denim-sam-proxy = { path = "proxy" }
denim-sam-client = { path = "client" }
denim-sam-common = { path = "common" }
e2e = { path = "e2e" }

sam-server = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "store-type" }
sam-common = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "store-type" }
sam-client = { git = "https://github.com/SAM-Research/sam-instant-messenger.git", branch = "store-type" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
rustls = "0.23.15"
rustls-pemfile = "2.2.0"
tokio = "1.40.0"
axum = "0.8.1"
axum-extra = "0.10.0"
axum-server = "0.7"
derive_more = "2.0.1"
futures-util = "0.3.30"
tokio-tungstenite = "0.26.2"
base64 = "0.21.7"
bon = "3.3.2"
async-trait = "0.1.83"
env_logger = "0.11.6"
log = "0.4.25"
clap = "4.5.32"
serde_json = "1.0.139"
serde = "1.0.210"
prost-build = "0.13.5"
prost = "0.13.5"
rand = "0.8.5"
bincode = "2.0.1"


# Dev dependencies
rstest = "0.24.0"
