[package]
name = "denim-sam-client"
version = "0.1.0"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sam-client = { workspace = true }
sam-common = { workspace = true }
libsignal-protocol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true, features = ["from", "debug"] }
