[package]
name = "denim-sam-client"
version = "0.1.0"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sam-client = { workspace = true }
sam-common = { workspace = true }
sam-net = { workspace = true }
sam-security = { workspace = true }
denim-sam-common = { workspace = true }
libsignal-protocol = { workspace = true }
libsignal-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bon = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }
env_logger = { workspace = true }
log = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
prost = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rustls = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
sam-test-utils = { workspace = true }
