[package]
name = "denim-sam-common"
version = "0.1.0"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sam-common = { workspace = true }
prost = { workspace = true }
bon = { workspace = true }
rand = {workspace = true}
log = {workspace = true}
bincode = {workspace = true}

[build-dependencies]
prost-build = { workspace = true }
