[package]
name = "denim-sam-common"
version = "0.1.0"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sam-common = { workspace = true }
prost = { workspace = true }
bon = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
env_logger = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from"] }
async-trait = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
bincode = { workspace = true }
libsignal-protocol = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
