[package]
name = "e2e"
version = "0.1.0"
edition = "2021"
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sam-server = { workspace = true }
sam-common = { workspace = true }
sam-client = { workspace = true }
sam-net = { workspace = true }
test-utils = { workspace = true }
denim-sam-client = { workspace = true }
denim-sam-common = { workspace = true }
denim-sam-proxy = { workspace = true }
libsignal-protocol = { workspace = true }
tokio = { workspace = true, features = ["full"] }
env_logger = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rstest = { workspace = true }
rand = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }
